--- a/WebContent/cadastro/cadFornecedor.xhtml
+++ b/WebContent/cadastro/cadFornecedor.xhtml
@@ -155,7 +155,7 @@
 
 									<div class="ui-g-12 ui-lg-2">
 										<h:outputLabel value="Telefone:*" />
-										<p:inputText required="true"
+										<p:inputMask required="true" mask="(999) 9 99999999"
 											value="#{fornecedorBean.fornecedorModel.telefone}" />
 									</div>
 								</div>
