--- a/WebContent/cadastro/findConvenio.xhtml
+++ b/WebContent/cadastro/findConvenio.xhtml
@@ -117,10 +117,9 @@
 								</div>
 							</div>
 							<div class="ui-g-12 ui-lg-1">
-									<p:commandLink rendered="#{convenioBean.lstConvenio.size() > 0}"	
-									actionListener="#{convenioBean.geraRelatorio}">
+								<p:commandLink rendered="#{convenioBean.lstConvenio.size() > 0}" actionListener="#{convenioBean.geraRelatorio}">
 									<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40" />
-									</p:commandLink>
+								</p:commandLink>
 							</div>
 						</div>
 					</div>
