--- a/WebContent/financeiro/receber/receberConsulta.xhtml
+++ b/WebContent/financeiro/receber/receberConsulta.xhtml
@@ -115,16 +115,17 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 	width: 100%;
 	padding: 2%;
 }
+
 .ui-confirm-dialog-message {
-    display: inline-block;
-    margin-top: 1px;
-    font-size: large;
-    font-weight: bold;
+	display: inline-block;
+	margin-top: 1px;
+	font-size: large;
+	font-weight: bold;
 }
 
 .ui-button-text-icon-left .ui-button-text {
-    padding: .3em 1em .3em 2.1em;
-    font-size: large;
+	padding: .3em 1em .3em 2.1em;
+	font-size: large;
 }
 </style>
 
@@ -147,7 +148,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 			<h:form id="formulario">
 				<p:remoteCommand name="atualizarAoSair" update="@form"
 					actionListener="#{contasReceberBean.busca}" />
-<br />
+				<br />
 
 				<div class="ui-g">
 					<p:commandButton
@@ -235,7 +236,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 			<div class="ui-fluid">
 
 				<h:form id="pagamentoEspecial">
-				<br />
+					<br />
 					<div class="ui-g">
 						<p:commandButton
 							style="height:40px;width:200px; background-color: green; 
@@ -245,7 +246,8 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 							value="Pagar Parcela" update="tableEspecial"
 							actionListener="#{contasReceberBean.pagarEspecial}" />
 						<p:commandButton value="Fechar"
-							style="height:40px;  margin: 0 auto; width:130px; " onclick="PF(mostraPagamentoEspecial).hide()" />
+							style="height:40px;  margin: 0 auto; width:130px; "
+							onclick="PF(mostraPagamentoEspecial).hide()" />
 					</div>
 					<br />
 					<div class="ui-g">
@@ -399,7 +401,8 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 														<p:selectOneMenu style="height: 35px"
 															value="#{contasReceberBean.contasReceberModel.quantidadeParcelas}"
 															rendered="#{contasReceberBean.contasReceberModel.formaPagamento.idFormaPagamento eq '1'}">
-															<f:selectItem itemLabel="Selecione" noSelectionOption="true"/>
+															<f:selectItem itemLabel="Selecione"
+																noSelectionOption="true" />
 															<f:selectItem itemLabel="1x" itemValue="1" />
 															<f:selectItem itemLabel="2x" itemValue="2" />
 															<f:selectItem itemLabel="3x" itemValue="3" />
@@ -452,7 +455,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 														<h:outputLabel value="Vencimento" />
 														<p:calendar value="#{contasReceberBean.vencimentoUm}"
 															mindate="today" pattern="dd/MM/yyyy">
-															<p:ajax event="change" listener="#{calculaVencimento}"/>
+															<p:ajax event="change" listener="#{calculaVencimento}" />
 														</p:calendar>
 													</div>
 												</div>
@@ -502,6 +505,5 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 				</h:form>
 			</div>
 		</p:dialog>
-
 	</ui:define>
 </ui:composition>
