--- a/WebContent/prontuario/prontuarioMedico.xhtml
+++ b/WebContent/prontuario/prontuarioMedico.xhtml
@@ -43,7 +43,7 @@
 }
 
 .ui-g label {
-	font-size: medium;
+	font-size: large !important;
 	color: #2e6e9e;
 	font-weight: bold;
 }
@@ -98,27 +98,6 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 								</div>
 							</div>
 						</div>
-						<!-- Botão Atestado -->
-						<!-- <p:commandButton value="Atestado"
-							rendered="#{prontuarioBean.estado ne 'A'}"
-							style="height:40px;width:130px; background-color: seagreen; background: seagreen; color:white !important"
-							ajax="true" immediate="true" id="buttonAtestado"
-							icon="fa fa-info-circle" iconPos="right"
-							action="#{prontuarioBean.mudaEstadoAtestado}" update="@form">
-
-							<p:confirm
-								message="Deseja ir para Atestado? A tela atual será perdida, senão salva!"
-								icon="ui-icon-mail-closed" />
-						</p:commandButton>
-						<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-							<div align="center">
-								<p:commandButton value="Sim" type="button"
-									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-
-								<p:commandButton value="Não" type="button"
-									styleClass="ui-confirmdialog-no" icon=" ui-icon-close" />
-							</div>
-						</p:confirmDialog> -->
 
 						<!-- Botão Guia de Consulta -->
 						<p:commandButton value="Guia Consulta"
@@ -152,58 +131,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 							</div>
 						</p:confirmDialog>
 
-						<!-- Botão Historico -->
-						<!-- <p:commandButton value="Histórico"
-							rendered="#{prontuarioBean.estado ne 'H'}"
-							style="height:40px;width:130px; background-color: silver; background: silver; color:white !important"
-							ajax="true" immediate="true" id="buttonHistorico"
-							icon="fa fa-info-circle" iconPos="right"
-							action="#{prontuarioBean.mudaEstadoHistorico}" update="@form">
-
-							<p:confirm
-								message="Deseja ir para a Histórico? A tela atual será perdida, senão salva!"
-								icon="ui-icon-mail-closed" />
-						</p:commandButton>
-
-						<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-							<div align="center">
-								<p:commandButton value="Sim" type="button"
-									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-
-								<p:commandButton value="Não" type="button"
-									styleClass="ui-confirmdialog-no" icon=" ui-icon-close" />
-							</div>
-						</p:confirmDialog>
- -->						<!-- Botão Limpar -->
-	<!-- 					<p:commandButton value="Limpar"
-							style="height:40px;width:130px; background-color: saddlebrown; background: saddlebrown; color:white !important"
-							ajax="true" immediate="false" id="buttonLimpar"
-							icon="fa fa-info-circle" iconPos="right">
-						</p:commandButton>
-
-						Botão Encaminhamento
-						<p:commandButton value="Encaminhamento"
-							rendered="#{prontuarioBean.estado ne 'E'}"
-							style="height:40px;width:170px; background-color: darkblue; background: darkblue; color:white !important"
-							ajax="true" immediate="true" id="buttonGuiaEncaminhamento"
-							icon="fa fa-location-arrow" iconPos="right"
-							action="#{prontuarioBean.mudaEstadoEncaminhamento}"
-							update="@form">
-							<p:confirm
-								message="Deseja ir para a Encaminhamento? A tela atual será perdida, senão salva!"
-								icon="ui-icon-mail-closed" />
-						</p:commandButton>
-
-						<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-							<div align="center">
-								<p:commandButton value="Sim" type="button"
-									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-
-								<p:commandButton value="Não" type="button"
-									styleClass="ui-confirmdialog-no" icon=" ui-icon-close" />
-							</div>
-						</p:confirmDialog>
- -->					</p:panel>
+				</p:panel>
 				</div>
 			</p:outputPanel>
 
@@ -231,5 +159,33 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 				<ui:include src="/prontuario/encaminhamento.xhtml" />
 			</h:form>
 		</h:form>
+		
+		<p:dialog widgetVar="tipoEncaminhamento" id="tipoEncaminhamento"
+			modal="true" resizable="false" height="400" width="400"
+			responsive="true" dynamic="true" appendToBody="@body"
+			header="Motivo do Encaminhamento?">
+			<div class="ui-fluid">
+				<h:form id="formTipoEncaminhamento">
+					<div class="ui-g">
+						<p:outputLabel />
+						<p:selectOneMenu
+							value="#{prontuarioBean.prontuarioModel.tipoEncaminhamento}">
+							<f:selectItem
+								itemLabel="Necessita de especialidade médica específica"
+								itemValue="Necessita de especialidade médica específica" />
+							<f:selectItem itemLabel="A pedido do paciente" itemValue="A pedido do paciente" />
+						</p:selectOneMenu>
+					</div>
+					<div class="ui-g" align="center">
+						<div class="ui-g-12 ui-lg-12">
+							<p:commandButton value="Adicionar"
+								style="height:40px;width:130px; background-color: seagreen; background: seagreen; color:white !important; font-size: large"
+								oncomplete="PF('tipoEncaminhamento').hide()"
+								actionListener="#{prontuarioBean.geraTipoEncaminhamento}" />
+						</div>
+					</div>
+				</h:form>
+			</div>
+		</p:dialog>
 	</ui:define>
 </ui:composition>
