--- a/WebContent/cadastro/cadAtendente.xhtml
+++ b/WebContent/cadastro/cadAtendente.xhtml
@@ -77,6 +77,11 @@
 .ui-panel .ui-panel-title {
 	
 }
+
+.ui-selectonebutton {
+    display: inline-block;
+    padding: 5px;
+}
 </style>
 }
 	</ui:define>
@@ -192,7 +197,18 @@
 											value="#{atendenteBean.atendenteModel.pessoa.pessoaTelefoneSecundario}"
 											mask="(999)9 9999-9999" maxlength="12" />
 									</div>
-									<div class="ui-g-12 ui-lg-4">
+
+									<div class="ui-g-12 ui-lg-1">
+										<h:outputLabel value="Criar Login" />
+										<p:selectOneButton rows="1" cols="30" maxlength="315"
+											autoResize="true"
+											value="#{atendenteBean.atendenteModel.temLogin}" >
+										<f:selectItem itemLabel="Sim" itemValue="S" />
+										<f:selectItem itemLabel="Nâo" itemValue="N" />
+										</p:selectOneButton>
+									</div>
+
+									<div class="ui-g-12 ui-lg-3">
 										<h:outputLabel id="labelObservacaoEstoquista" for="obs"
 											value="Observação:" />
 										<p:inputTextarea id="obs" rows="1" cols="30" maxlength="315"
@@ -270,7 +286,48 @@
 
 		</h:form>
 
+		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true">
+			<div class="ui-fluid">
+				<h:form id="formUsuario">
+					<div class="ui-g">
+						<div class="ui-g-12 ui-lg-2">
+							<h:outputLabel value="Login:*" />
+							<p:inputText required="true"
+								value="#{atendenteBean.loginModel.login}" autocomplete="true"
+								requiredMessage="Informe o Nome do Usuário">
+								<p:ajax process="@this" />
+							</p:inputText>
+						</div>
 
+						<div class="ui-g-12 ui-lg-2">
+							<h:outputLabel value="Senha:*" />
+							<p:password autocomplete="true" required="true"
+								value="#{atendenteBean.loginModel.senha}"
+								requiredMessage="Informe o Senha do usuário">
+								<p:ajax process="@this" />
+							</p:password>
+						</div>
+
+						<div class="ui-g-12 ui-lg-2">
+							<p:outputLabel value="Perfis" />
+							<p:autoComplete completeMethod="#{auxController.completePerfil}"
+								forceSelection="true" converter="entityConverter" var="a"
+								itemLabel="#{a.perfilNome}" itemValue="#{a}"
+								value="#{atendenteBean.perfilModel}" minQueryLength="2"
+								dropdown="true" maxResults="30" required="false"
+								requiredMessage="Informe um Perfil">
+							</p:autoComplete>
+						</div>
+					</div>
+
+					<p:commandButton id="buttonFecharDeSenha" value="Salvar"
+						ajax="true" partialSubmit="true"
+						action="#{atendenteBean.salvarLogin}" process="@this, @form"
+						immediate="false" update="formUsuario">
+					</p:commandButton>
+				</h:form>
+			</div>
+		</p:dialog>
 
 	</ui:define>
 
