--- a/WebContent/cadastro/cadPaciente.xhtml
+++ b/WebContent/cadastro/cadPaciente.xhtml
@@ -173,7 +173,7 @@
 											value="Email: *" />
 
 										<p:inputText id="email" required="true" maxlength="100"
-											value="#{pacienteBean.pacienteModel.email}"
+											value="#{pacienteBean.pacienteModel.pessoa.pessoaEmail}"
 											requiredMessage="Informe o Email" />
 									</div>
 									<div class="ui-g-12 ui-lg-2">
