--- a/WebContent/publico/login.xhtml
+++ b/WebContent/publico/login.xhtml
@@ -66,9 +66,7 @@
                     </div>
                     <div class="ui-g-12 chkbox-container" align="center">
                         <div class="ui-g-12 ui-md-12"  align="center" >
-                            <h:outputLink value="#">
-                                Forgot password?
-                            </h:outputLink>
+                            <a href="#{facesContext.externalContext.requestContextPath}/publico/recuperacao.jsf?faces-redirect=true" >Forgot password?</a>
                         </div>
                       <!--   <div class="ui-g-6 rememberme-container">
                             <p:outputLabel for="remember-me" value="Remember Me"/>
