--- a/WebContent/restrito/dashboard.xhtml
+++ b/WebContent/restrito/dashboard.xhtml
@@ -54,12 +54,14 @@
 	color: black;
 }
 
+
 .ui-fluid .ui-calendar, .ui-fluid .ui-calendar input {
-	width: 100%;
-	height: 35px;
-	/*font-size: 20px !important;*/
-	text-align: center;
-	color: black;
+    width: 100%;
+    height: 40px;
+    /* font-size: 20px !important; */
+    font-size: large;
+    text-align: center;
+    color: black;
 }
 
 .ui-selectonemenu label.ui-selectonemenu-label {
@@ -228,7 +230,6 @@
 					</div>
 				</p:tab>
 				<p:tab title="Lista">
-					<p:panel>
 			<div class="ui-fluid">
 				<p:panel header="Pesquisa de Agendamentos" style="text-align:center">
 					<div class="ui-g">
@@ -326,7 +327,6 @@
 					</div>
 				</p:panel>
 			</div>
-					</p:panel>
 				</p:tab>
 			</p:tabView>
 
