--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -21,6 +21,13 @@
         <!-- CHAMANDO Script JavaScript  -->
         <h:outputScript name="scripty.js" library="javascript"	id="jsScriptSistemaTemplate" />
         <ui:insert name="head"/>
+        <style>
+        	 .ui-growl-message {
+    font-size: medium !important;
+    text-align:center;
+}
+
+        </style>
     </h:head>
     <h:body>
        	 <!-- Menu personalizavel -->
@@ -36,7 +43,7 @@
             <!-- Mensagens do Sistema -->
 			<div id="msgError">
 				<p:growl id="msg" sticky="false" redisplay="true"
-					autoUpdate="true" life="10000" />
+					autoUpdate="true" life="10000"  />
 				<p:tooltip id="toolTipFocusTemplateParadise" globalSelector="a, :input, :button"
 					showEvent="focus" hideEvent="blur" />
 			</div>
