--- a/WebContent/cadastro/cadMedico.xhtml
+++ b/WebContent/cadastro/cadMedico.xhtml
@@ -266,12 +266,21 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 
 										</p:autoComplete>
 									</div>
-									<div class="ui-g-12 ui-lg-6">
+									<div class="ui-g-12 ui-lg-5">
 										<h:outputLabel id="labelObservacaoEstoquista" for="obs"
 											value="Observação:" />
 										<p:inputTextarea id="obs" rows="1" cols="30" maxlength="315"
 											autoResize="true"
 											value="#{medicoBean.medicoModel.pessoa.pessoaObservacao}" />
+									</div>
+									<div class="ui-g-12 ui-lg-1">
+										<h:outputLabel value="Criar Login" />
+										<p:selectOneButton rows="1" cols="30" maxlength="315"
+											autoResize="true"
+											value="#{medicoBean.medicoModel.temLogin}" >
+										<f:selectItem itemLabel="Sim" itemValue="S" />
+										<f:selectItem itemLabel="Nâo" itemValue="N" />
+										</p:selectOneButton>
 									</div>
 								</div>
 								<p:separator />
@@ -341,7 +350,48 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 			</div>
 
 		</h:form>
+		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true">
+			<div class="ui-fluid">
+				<h:form id="formUsuario">
+					<div class="ui-g">
+						<div class="ui-g-12 ui-lg-2">
+							<h:outputLabel value="Login:*" />
+							<p:inputText required="true"
+								value="#{medicoBean.loginModel.login}" autocomplete="true"
+								requiredMessage="Informe o Nome do Usuário">
+								<p:ajax process="@this" />
+							</p:inputText>
+						</div>
 
+						<div class="ui-g-12 ui-lg-2">
+							<h:outputLabel value="Senha:*" />
+							<p:password autocomplete="true" required="true"
+								value="#{medicoBean.loginModel.senha}"
+								requiredMessage="Informe o Senha do usuário">
+								<p:ajax process="@this" />
+							</p:password>
+						</div>
+
+						<div class="ui-g-12 ui-lg-2">
+							<p:outputLabel value="Perfis" />
+							<p:autoComplete completeMethod="#{auxController.completePerfil}"
+								forceSelection="true" converter="entityConverter" var="a"
+								itemLabel="#{a.perfilNome}" itemValue="#{a}"
+								value="#{medicoBean.perfilModel}" minQueryLength="2"
+								dropdown="true" maxResults="30" required="false"
+								requiredMessage="Informe um Perfil">
+							</p:autoComplete>
+						</div>
+					</div>
+
+					<p:commandButton id="buttonFecharDeSenha" value="Salvar"
+						ajax="true" partialSubmit="true"
+						action="#{medicoBean.salvarLogin}" process="@this, @form"
+						immediate="false" update="formUsuario">
+					</p:commandButton>
+				</h:form>
+			</div>
+		</p:dialog>
 
 
 	</ui:define>
