--- a/WebContent/cadastro/cadUsuario.xhtml
+++ b/WebContent/cadastro/cadUsuario.xhtml
@@ -123,64 +123,26 @@
 								<br />
 								<div class="ui-g">
 									
-								<div class="ui-g-12 ui-lg-2">
-									<h:outputLabel value="Novo Usuário?" />
-									<p:selectOneRadio required="true" value="#{loginBean.novo}" style="padding-left: 60px;"
-										requiredMessage="Informe o se é novo">
-										<f:selectItem itemLabel="Sim" itemValue="S" />
-										<f:selectItem itemLabel="Não" itemValue="N" />
-										<p:ajax update="@form" />
-									</p:selectOneRadio>
-								</div>
-
-								<div class="ui-g-12 ui-lg-2">
-										<h:outputLabel value="Tipo de Pessoa:*" />
-										<p:selectOneMenu required="true"
-											value="#{loginBean.pessoaModel.tipoPessoa}"
-											requiredMessage="Informe o Nome da Pessoa">
-											<f:selectItem itemLabel="Selecione" noSelectionOption="true"
-												itemValue="" />
-											<f:selectItem itemLabel="Atendente" itemValue="ATE" />
-											<f:selectItem itemLabel="Estoquista" itemValue="EST" />
-											<f:selectItem itemLabel="Médico" itemValue="MED" />
-											<p:ajax process="@this" update="@form" />
-										</p:selectOneMenu>
-								</div>		
-								
-								<ui:fragment  rendered="#{loginBean.novo eq 'S'}">
 									<div class="ui-g-12 ui-lg-3">
-										<h:outputLabel value="Nome :*" />
-										<p:inputText required="true"
-											value="#{loginBean.pessoaModel.pessoaNome}"
-											autocomplete="true"
-											requiredMessage="Informe o Nome da Pessoa" />
-									</div>
-								</ui:fragment>
-
-								<ui:fragment rendered="#{loginBean.novo eq 'N'}">
-									<div class="ui-g-12 ui-lg-2">
 										<h:outputLabel value="Pessoa" />
 										<p:autoComplete id="pessoa"
 											completeMethod="#{loginBean.completePessoa}"
 											forceSelection="true" converter="entityConverter" var="a"
 											itemLabel="#{a.pessoaNome}" itemValue="#{a}"
-											value="#{loginBean.pessoaAux}" minQueryLength="2"
+											value="#{loginBean.loginModel.pessoa}" minQueryLength="2"
 											dropdown="true" maxResults="30" required="true"
 											requiredMessage="Informe uma pessoa" style="height: 35px">
+										<p:column rendered="#{a.tipoPessoa eq 'MED'}">
+											#{a.pessoaNome} - (Médico)
+										</p:column>
+										<p:column rendered="#{a.tipoPessoa eq 'EST'}">
+											#{a.pessoaNome} - (Estoquista)
+										</p:column>
+										<p:column rendered="#{a.tipoPessoa eq 'ATE'}">
+											#{a.pessoaNome} - (Atendente)
+										</p:column>
 										</p:autoComplete>
 									</div>
-								</ui:fragment>
-								<ui:fragment rendered="#{loginBean.novo eq 'S'}">
-									<div class="ui-g-12 ui-lg-2">
-										<h:outputLabel value="CPF:*" />
-										<p:inputMask mask="999.999.999-99" required="true"
-											value="#{loginBean.pessoaModel.pessoaCPF}"
-											autocomplete="true"
-											requiredMessage="Informe o Nome da Pessoa" >
-											<p:ajax process="@this" />
-											</p:inputMask>
-									</div>
-								</ui:fragment>
 
 									<div class="ui-g-12 ui-lg-1">
 										<h:outputLabel value="Login:*" />
@@ -201,14 +163,14 @@
 											</p:password>
 									</div>
 
-									<div class="ui-g-12 ui-lg-1">
+									<div class="ui-g-12 ui-lg-3">
 										<p:outputLabel value="Perfis" />
 										<p:autoComplete
 											completeMethod="#{auxController.completePerfil}"
 											forceSelection="true" converter="entityConverter" var="a"
 											itemLabel="#{a.perfilNome}" itemValue="#{a}"
-											value="#{loginBean.perfilModel}" minQueryLength="2"
-											dropdown="true" maxResults="30" required="false"
+											value="#{loginBean.loginModel.perfil}" minQueryLength="2"
+											dropdown="true" maxResults="30" required="true"
 											requiredMessage="Informe um Perfil">
 										</p:autoComplete>
 									</div>
